# Image_to_pdf

./: .gitignore  LICENSE  README.md  USAGE.md  image_to_pdf_converter.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/image_to_pdf/: __init__.py  __main__.py  cli.py  converter.py
tests/: __init__.py  test_cli.py  test_converter.py
